<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <View
        android:id="@+id/ellipse_1"
        android:layout_width="737dp"
        android:layout_height="569dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="685dp"
        android:background="@drawable/ellipse_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/kuizzer"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/poppins_bold"
        android:gravity="top"
        android:text="@string/kuizzer"
        android:textAppearance="@style/kuizzer"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/ellipse_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ellipse_1" />

    <View
        android:id="@+id/ellipse_2"
        android:layout_width="657dp"
        android:layout_height="734dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-124dp"
        android:layout_marginTop="305dp"
        android:background="@drawable/ellipse_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ellipse_1"
        app:layout_constraintVertical_bias="0.414">


    </View>


    <Button
        android:id="@+id/sign_in"
        android:layout_width="213dp"
        android:layout_height="47dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="94dp"
        android:layout_marginBottom="550dp"
        android:background="@drawable/sign_in"
        android:fontFamily="@font/poppins_bold"
        android:onClick="goToSignInActivity"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="#108AA5"
        app:layout_constraintBottom_toBottomOf="@+id/ellipse_2"
        app:layout_constraintEnd_toStartOf="@+id/ellipse_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ellipse_2"
        app:layout_constraintTop_toTopOf="@+id/ellipse_2"
        app:layout_constraintVertical_bias="0.162" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="213dp"
        android:layout_height="47dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="196dp"
        android:layout_marginBottom="491dp"
        android:background="@drawable/sign_up"
        android:fontFamily="@font/poppins_bold"
        android:onClick="goToSignUpActivity"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="@+id/ellipse_2"
        app:layout_constraintEnd_toStartOf="@+id/ellipse_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ellipse_2"
        app:layout_constraintTop_toTopOf="@+id/ellipse_2"
        app:layout_constraintVertical_bias="1.0" />
    />

</androidx.constraintlayout.widget.ConstraintLayout>